--- a/F0/style.css
+++ b/F0/style.css
@@ -1,7 +1,7 @@
 .background {
     width: 100%;
     height: auto;
-    background-image: url("E://web_tasks//F0//pic//hhu.png");
+    background-image: url(".\\pic\\hhu.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -78,14 +78,4 @@
 
 .btn_register {
 	margin-top: 10px;
-}
-
-#footer{
-	position: absolute;
-	background-color: #000;
-	width:100%;
-	text-align:center;
-	color:#FFF;
-	font-size:14px;
-	padding:20px 0;
 }
